# docker-workshop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
pipeline/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
pipeline/nytaxi_explore/: pgadmin-queries.sql  taxizone_ingestion.ipynb
