[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "psycopg[binary,pool]",
    "pyarrow>=23.0.1",
    "sqlalchemy",
    "tqdm>=4.67.3",
    "click>=8.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
